themes/uikit/theme.css
/*
 * "Uikit" theme
 *
 * Adapted from ProcessWire Uikit Admin Theme by Ryan Cramer (https://processwire.com)
 *
 * @author Teppo Koivula (https://github.com/teppokoivula)
 */

html {
    padding-top: 50px;
}

.adminbar {
    background: #1c2836;
    box-shadow: inset 0 -2px 1px rgba(0,0,0,.05);
    min-height: 50px;
    padding: 0 15px;
}

.adminbar__list-item {
    height: 50px;
    position: relative;
}

.adminbar__list-item--active,
.adminbar__list-item:hover {
    background: transparent;
}

.adminbar__list-item--active:after,
.adminbar__list-item:hover:after {
    content: "";
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 6px 7px 6px;
    border-color: transparent transparent #fff transparent;
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: 6px;
    z-index: 99;
}

.adminbar__link,
.adminbar__link:visited,
.adminbar__text {
    color: rgba(255,255,255,.7);
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
    font-size: 16px;
    height: 50px;
    line-height: 50px;
    text-decoration: none;
}

.adminbar__link:hover {
    color: #add8e6;
    text-decoration: none;
}

.adminbar__list-item--active .adminbar__link,
.adminbar__list-item--active .adminbar__link:visited,
.adminbar__list-item--active:hover .adminbar__link,
.adminbar__list-item--active:hover .adminbar__link:visited {
    color: #fff;
}

.adminbar__text {
    color: rgba(255,255,255,.75);
}

.adminbar__img {
    float: left;
    margin: 10px 15px 0 0;;
    width: 30px;
}

.adminbar__list-item--linkless:after {
    display: none;
}

.adminbar__icon {
    opacity: .7;
    margin-bottom: -2px;
    margin-right: 7px;
}

.adminbar__list-item:not(.adminbar__list-item--linkless):hover .adminbar__icon,
.adminbar__list-item--active .adminbar__icon {
    opacity: 1;
}

.adminbar__list-item:not(.adminbar__list-item--active):hover:not(.adminbar__list-item--linkless) .adminbar__icon path {
    fill: #add8e6;
}

